client/src/styles/styles.scss
// Default: Mobile

// Variables
$paleYellow: #fffef9;
$pastelPink: #ffebec;
$lightBrown: #a78c7b;
$gold: rgb(255, 217, 0);
$red: rgb(77, 0, 23);
$grayBrown: #585b56;
$gray: #1b2326;

$titleFont: "Lato", sans-serif;
$bodyFont: 'Poiret One', cursive;
$logoFont: 'Euphoria Script', cursive;
$navFont: 'Poiret One', cursive;

body {
  margin: 0 !important;
  color: $gray;
  font-family: $bodyFont;
  background-color: transparent;
}

p {
  font-size: 0.92rem;
}

a {
  .car-heading {
    font-family: $logoFont;
    font-size: 10vh;
    text-shadow:2px 2px 5px white, -2px -2px 3px white;
    padding: 3.35em 0 4em 0;
    color: $red;
    &:hover {
      box-shadow: none;
    }
  }
}

.car-subhead {
  font-family: $titleFont;
  font-size: 1rem;
  text-shadow: none;
}

.container-fluid {
  background-color: $pastelPink;
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
}

.container-fluid:children {
  color: $gray;
}

.logo {
  font-size: 40px;
  font-family: $logoFont;
}

img {
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
}

#navi-bar {
  margin: 0;
  color: $lightBrown;
  text-decoration: none;
  font-family: $navFont;
  font-weight: bold;
  .nav-link {
    &:hover {
    color: $lightBrown;
    background: $paleYellow;
    transition: all 0.5s;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
    cursor: pointer;
    }
    a:hover {
      box-shadow: none;
    }
  }
  .logo {
    font-size: 26px;
    color: $gray;
    padding: 0 0 0 1rem;
    &:hover {
      box-shadow: none;
    }
  }
}

div.form-group {
  margin-bottom: 0.2rem;
}

.button {
  color: $paleYellow;
  text-decoration: none;
  background-color: $lightBrown;
  border: none;
  border-radius: 0;
  padding: 3px 7px;
  margin: 0.8rem 0 1rem;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
  &:hover {
    color: $gray;
    background: $pastelPink;
    transition: all 0.5s;
  }
  &:active {
    background: $grayBrown !important;
    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2) !important;
  }
  &:focus {
    color: $paleYellow;
    background-color: $lightBrown;
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2) !important;
  }
}

.cart-item {
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
  padding: 1rem;
  margin-top: 1rem
}

.del-button {
  color: $gray;
  text-decoration: none;
  background-color: $paleYellow;
  width: 1.5rem;
  height: 1.5rem;
  text-align: center;
  border: none;
  border-radius: 50%;
  padding: 3px 5px;
  margin: auto 2rem auto auto;
  line-height: 0.7;
  &:hover {
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
    color: $paleYellow;
    background: $red;
    transition: all 0.5s;
  }
  &:active {
    background: $red !important;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) !important;
  }
  &:focus {
    color: $gray;
    background-color: $paleYellow;
    box-shadow: none;
  }
}

#sidebar {
  margin-left: -320px;
  min-width: 320px;
  max-width: 320px;
  background-color: $pastelPink !important;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
  transition: all 0.3s;
  .nav-link {
    margin-left: 0.5rem;
  }
  svg {
    &:hover {
      cursor: pointer;
    }
  }
}

#sidebar.active {
  margin-left: 0;
}

a {
  color: $grayBrown;
  &:hover {
    color: $lightBrown;
    text-decoration: none;
    transition: all 0.3s;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2)
  }
}

#sidebar {
  a {
    width: 320px;
    padding: 10px;
    font-size: 1.1em;
    display: block;
    &:hover {
      color: $lightBrown;
      background: $paleYellow;
    }
  }
}

#profile {
  img {
    max-height: 100%;
    max-width: 100%;
  }
}

.carousel-control-next, .carousel-control-prev {
  &:hover {
    box-shadow: none;
  }
}

.options {
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
}

.card {
  border: none;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
}

.product-card {
  height: 360px;
}

.container {
  border: none !important;
}

.formLabel {
  color: $lightBrown;
}

.overlay {
  display: none;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.4);
  z-index: 998;
  opacity: 0;
  transition: all 3s ease-in-out;
}

.overlay.active {
  display: block;
  opacity: 1;
}

.card {
  height: 25rem;
}

.card-img-top {
  margin: 5px auto;
  height: 240px;
  width: 240px;
}


// Tablet
@media only screen and (max-width: 768px) {
  body {
    font-size: 0.8rem;
  }

  p{
    font-size: 0.8rem;
  }

  .car-heading {
    font-size: 5.5vh !important;
    padding: 6em 10px 5em 10px !important;
  }

  .car-subhead {
    font-size: 10px;
  }

  .carousel-inner {
    height: 88vh !important;
  }

  .form-control {
    height: 1.5rem !important;
    font-size: 0.8rem !important;    
  }

  .formLabel {
    font-size: 1rem;
  }

  .del-button {
    margin-right: 8px;
  }

  .cart-img {
    height: 100px;
    margin: 0 auto !important;
  }

  .product-img {
    height: 220px;
    margin: 0 auto !important;
  }

  .button {
    font-size: 0.8rem;
  }


  #hide {
    display: none;
  }

  #sidebar {
    margin-left: -220px;
    min-width: 220px;
    max-width: 220px;
    font-size: 0.7rem;
  }

  #navi-bar {
    width: 100%;
    margin: 0.5rem 0 0 0;
    padding: 0;
  }

  .card {
    margin: 0 auto 1 auto;
    padding: 2rem;
    justify-content: center;
  }

  .product-card {
    height: 250px;
  }

  .product-img {
    height: 150px !important;
    width: auto !important;
  }

  .prod-name {
    font-size: 1rem;
  }

  .card-img-top {
    margin: 2px auto;
    height: 200px;
    width: 200px;
  }
}

// Desktop
@media only screen and (max-width: 1024px) {
  .card-img-top {
    margin: 5px auto;
    height: 220px;
    width: 220px;
  }
}

